--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,22 @@
 [tool.poetry]
 name = "silverspeak"
-version = "2.2.0"
+version = "2.3.0"
 description = "A Python library to perform homoglyph-based attacks on text. It supports both identical and non-identical homoglyphs across multiple languages."
 readme = "README.md"
 license = "GPL-3.0"
 authors = ["Aldan Creo <os@acmc.fyi>"]
-keywords = ["homoglyph", "attack", "text", "security"]
+keywords = [
+    "homoglyph", "attack", "text", "security", "obfuscation", "phishing", 
+    "spoofing", "unicode", "cybersecurity", "text-manipulation", 
+    "text-security", "character-substitution", "text-obfuscation", 
+    "identity-theft", "data-protection", "adversarial-attacks", 
+    "unicode-homoglyphs", "text-attacks", "cyber-attacks", "information-security"
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pandas = "==2.2.2"
+pandas = "^2.2.2"
+uniscripts = {git = "https://github.com/ACMCMC/uniscripts.git"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
