--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ unicodedataplus = "^16.0.0.post1"
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
 pytest = "^8.3.5"
-sphinx = "^8.2.3"
+sphinx = "^7.0.0"
+sphinx_rtd_theme = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
