--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ keywords = [
 python = ">=3.11,<4.0"
 pandas = "^2.2.2"
 unicodedataplus = "^16.0.0.post1"
+transformers = "^4.51.3"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
