--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python = ">=3.11,<4.0"
 pandas = "^2.2.2"
 unicodedataplus = "^16.0.0.post1"
 transformers = "^4.51.3"
+torch = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
