--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -17,27 +17,32 @@ jobs:
         with:
           python-version: '3.11'
       
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.5.1
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black isort mypy
-          pip install -e .
+          poetry install --with dev
       
       - name: Lint with flake8
         run: |
           # Stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # Exit-zero treats all errors as warnings
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
       
       - name: Check formatting with black
         run: |
-          black --check --diff --line-length 120 .
+          poetry run black --check --diff --line-length 120 .
       
       - name: Check import sorting with isort
         run: |
-          isort --check --diff .
+          poetry run isort --check --diff .
       
       - name: Type check with mypy
         run: |
-          mypy --ignore-missing-imports silverspeak/
+          poetry run mypy --ignore-missing-imports silverspeak/
