--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -31,17 +31,17 @@ jobs:
       - name: Lint with flake8
         run: |
           # Stop the build if there are Python syntax errors or undefined names
-          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 silverspeak/ --count --select=E9,F63,F7,F82 --show-source --statistics
           # Exit-zero treats all errors as warnings
-          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+          poetry run flake8 silverspeak/ --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
       
       - name: Check formatting with black
         run: |
-          poetry run black --check --diff --line-length 120 .
+          poetry run black --check --diff --line-length 120 silverspeak/
       
       - name: Check import sorting with isort
         run: |
-          poetry run isort --check --diff .
+          poetry run isort --check --diff silverspeak/
       
       - name: Type check with mypy
         run: |
