--- a/mypy.ini
+++ b/mypy.ini
@@ -11,6 +11,15 @@ strict_optional = True
 warn_redundant_casts = True
 warn_no_return = True
 warn_unreachable = True
+ignore_missing_imports = True
+
+# Silence specific errors for now
+disallow_any_generics = False
+disallow_any_unimported = False
+disallow_any_expr = False
+disallow_any_decorated = False
+disallow_any_explicit = False
+disallow_subclassing_any = False
 
 [mypy.plugins.numpy.*]
 follow_imports = skip
@@ -23,3 +32,7 @@ follow_imports = skip
 
 [mypy.plugins.unicodedataplus.*]
 follow_imports = skip
+
+# Silencing errors for specific modules
+[mypy-silverspeak.utils]
+ignore_errors = True
