--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ flake8 = "^6.1.0"
 black = "^23.11.0"
 isort = "^5.12.0"
 mypy = "^1.6.0"
+tomli = "^2.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
